--- a/themes/jackreid/layouts/_default/photo.html
+++ b/themes/jackreid/layouts/_default/photo.html
@@ -2,7 +2,7 @@
 <main>
   <article>
     <header>
-      <h1 class="note-list__title">{{.Title}}</h1>
+      <h1 class="page-title">{{.Title}}</h1>
     </header>
     {{.Content}}
   </article>
