--- a/themes/jackreid/layouts/index.html
+++ b/themes/jackreid/layouts/index.html
@@ -3,7 +3,7 @@
 <p aria-hidden="true" class="homepage-title">{{ .Site.Title }}</p>
 <article class="homepage-article">
 {{ .Content }}
+{{- partial "recent_highlights.html" . -}}
 {{- partial "recent_links.html" . -}}
-<p>See more notes <a href="{{ "/note" | absURL }}">here</a>.</p>
 </article>
 {{ end }}
