--- a/themes/jackreid/layouts/_default/highlight.html
+++ b/themes/jackreid/layouts/_default/highlight.html
@@ -2,14 +2,16 @@
 <main>
   <article>
     <header>
-      <h1 class="note-list__title">{{.Title}}</h1>
+      <h1 class="page-title">{{.Title}}</h1>
     </header>
     {{.Content}}
   </article>
   {{ $paginator := .Paginate (where .Pages "Type" "highlight") }}
-  <ul class="note-list__list">
+  <ul class="highlight-list__list">
     {{ range $paginator.Pages }}
-      {{- partial "note.html" . -}}
+    <li>
+      {{- partial "card/highlight.html" . -}}
+    </li>
     {{ end }}
   </ul>
   {{ partial "pagination.html" . }}
