--- a/themes/jackreid/layouts/_default/media.html
+++ b/themes/jackreid/layouts/_default/media.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <nav class="single-static-nav">
-  <h2 class="single-static-nav__title"><a href="/media">Media</a></h2>
+  <h2 class="single-static-nav__title">Media</h2>
   <ul class="single-static-nav__list">
     <li class="single-static-nav__list-item">
       <a href="{{ "/books/read" | absURL }}">Read</a>
