--- a/themes/jackreid/layouts/_default/post.html
+++ b/themes/jackreid/layouts/_default/post.html
@@ -2,21 +2,21 @@
 <main>
   <article>
     <header>
-      <h1 class="u-title">{{.Title}}</h1>
+      <h1 class="page-title">{{.Title}}</h1>
     </header>
     {{.Content}}
   </article>
   <ul class="post-list__list">
     {{ range .Pages }}
-    <li class="post-list__list-item">
+    <li class="post-list__list-item h-entry">
       <h2 class="post-list__list-item-title">
-        <a href="{{.Permalink}}">{{ .Title }}</a>
+        <a class="p-name" href="{{.Permalink}}">{{ .Title }}</a>
       </h2>
       <h3 class="post-list__list-item-subtitle">{{.Params.subtitle}}</h3>
-      <p class="post-list__list-item-summary">{{.Summary}}</p>
       <time class="post-list__list-item-date">
-        <a href="{{.Permalink}}">{{ .Date.Format "2 January 2006" }}</a>
+        {{ .Date.Format "2 January 2006" }}
       </time>
+      <p class="post-list__list-item-summary p-summary">{{.Summary}}</p>
     </li>
     {{ end }}
   </ul>
