--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -44,5 +44,5 @@
     <meta name="twitter:description" content="{{ .Content | truncate 100 }}">
   {{ end }}
 
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <!--<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>-->
 </head>
