--- a/themes/jackreid/layouts/_default/photo.html
+++ b/themes/jackreid/layouts/_default/photo.html
@@ -7,15 +7,15 @@
     {{.Content}}
   </article>
   {{ $paginator := .Paginate (where .Pages "Type" "photo") }}
-  <ul class="note-list__list">
+  <ul class="photo-list__list">
     {{ range $paginator.Pages }}
-      <li class="note-list__list-item">
+      <li class="photo-list__list-item">
+        <h2 class="photo-list__list-item-title">{{ .Title }}</h2>
+        <a class="photo-list__list-item-permalink" href="{{.Permalink}}">{{.Date.Format "2 January 2006"}}</a>
         {{ with index (.Resources.ByType "image") 0 }}
           {{ $image := .Resize "800x" }}
           <img src="{{ $image.RelPermalink | absURL }}" alt="{{ .Title }}">
         {{ end }}
-        <h2 class="note-list__list-item-title">{{ .Title }}</h2>
-        <a class="note-list__list-item-permalink" href="{{.Permalink}}">{{.Date.Format "2 January 2006"}}</a>
       </li>
     {{ end }}
   </ul>
