--- a/themes/jackreid/layouts/partials/head.html
+++ b/themes/jackreid/layouts/partials/head.html
@@ -1,5 +1,5 @@
 <head>
-  <title>{{ .Title }} | {{ .Site.Title }}</title>
+  <title>{{ if .Title }}{{ .Title }}{{ else }}{{ .Summary }}{{ end }} | {{ .Site.Title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="{{ .Permalink }}">
 
