--- a/themes/jackreid/layouts/partials/recent_links.html
+++ b/themes/jackreid/layouts/partials/recent_links.html
@@ -1,7 +1,7 @@
 <ul class="recent-links">
   <h3>Recent Links</h3>
   <ul>
-  {{ range where .Site.Pages "Section" "link" }}
+  {{ range first 5 (where .Site.Pages "Section" "link") }}
     <li>
       <time>{{.Date.Format "2 Jan '06"}}</time>
       <a href="{{ .Params.link }}">{{ .Title }}</a>
