--- a/themes/jackreid/layouts/_default/single.html
+++ b/themes/jackreid/layouts/_default/single.html
@@ -12,7 +12,7 @@
   {{ if eq .Section "about" }}
   <h2 class="page-title">{{ .Title }}</h2>
   {{ else }}
-    {{ if .Title }}
+    {{ if and (.Title) (ne .Section "note") }}
     <h2 class="p-name single-article__title">{{ .Title }}</h2>
     {{ end }}
   {{ end }}
