--- a/themes/jackreid/static/css/style.css
+++ b/themes/jackreid/static/css/style.css
@@ -365,6 +365,29 @@ pre {
 }
 
 /**
+ * Link Card
+ */
+.link-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+.link-card__link {
+  padding-right: 1rem;
+}
+
+@media screen and (max-width: 40rem) {
+  .link-card, .link-card > * {
+    display: block;
+  }
+
+  .link-card {
+    margin-bottom: 1rem;
+  }
+}
+
+
+/**
  * Single pages
  */
 .single-article__main {
